Testing needs to continue, but prob finished
Need to make the UI for this stuff, but it's pretty awesome that this now has user abilities. Going to implement the ability to submit requests for adding or removing propagandists or hosts.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,15 @@
 {
 	"compilerOptions": {
-	  "lib": ["dom", "dom.iterable"],
+		"target": "ES5",
 	  "outDir": "dist",
 	  "allowJs": true,
 	  "skipLibCheck": true,
 	  "strict": true,
 	  "esModuleInterop": true,
-	  "module": "es2022",
-	  "moduleResolution": "bundler",
+	  "module": "CommonJS",
 	  "resolveJsonModule": true,
 	  "isolatedModules": true,
 	  "incremental": true,
-	  "paths": {
-		"~/models/*": ["./src/models/*"],
-		"~/middleware/*": ["./src/middleware/*"],
-		"~/*": ["./src/*"]
-	  },
 	  "types": ["./global.d.ts"]
 	},
 	"include": ["**/*.ts"],
